FindBugs:Don't use new String("foo"), use "foo". Method invokes dubious Boolean constructor; use Boolean.valueOf(...) instead